WebCore/accessibility/AXObjectCache.h
@@ -118,6 +118,7 @@ public:
     };
 
     void postNotification(RenderObject*, AXNotification, bool postToElement, PostType = PostAsynchronously);
+    void postNotification(AccessibilityObject*, Document*, AXNotification, bool postToElement, PostType = PostAsynchronously);
 
 protected:
     void postPlatformNotification(AccessibilityObject*, AXNotification);
